--- a/style.css
+++ b/style.css
@@ -11,12 +11,28 @@
     padding-bottom: 30px;
     opacity: 0.7;
 }
-h1{
+.study h1{
     text-align: center;
     color: #3e90ff;
 }
 
-h5{
+.study h5{
     text-align: center;
     padding-bottom: 50px;
+}
+.sady{
+    padding-top: 50px;
+}
+.hero{
+    padding-left: 200px;
+    padding-right: 200px;
+}
+.hero h1{
+    text-align: center;
+    color: #3e90ff;
+}
+.hero h5{
+    text-align: center;
+    opacity: 0.7;
+    font-size: 15px;
 }
